# FacialExpressions

facial_expressions_ros_interface/: rviz_config.rviz
facial_expressions_ros_interface/image_publisher/: CMakeLists.txt  package.xml
facial_expressions_ros_interface/image_publisher/include/: image_publisher_node.h
facial_expressions_ros_interface/image_publisher/src/: image_publisher_node.cpp  main.cpp
facial_expressions_ros_interface/model_interface/: CMakeLists.txt  package.xml
facial_expressions_ros_interface/model_interface/include/: consumer.h  face.h  face_classifier.h  face_detector.h  model_interface_node.h
facial_expressions_ros_interface/model_interface/src/: consumer.cpp  face_classifier.cpp  face_detector.cpp  main.cpp  model_interface_node.cpp
model/: model_trainer.ipynb
