<?xml version="1.0"?>
<package format="2">
  <name>image_publisher</name>
  <version>1.12.0</version>
  <description>
    A package containing facial expressions image publisher interface.
  </description>
  <maintainer email="yildirimg@mef.edu.tr">Göktuğ Yıldırım</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>OpenCV</build_depend>
  <build_depend>sensor_msgs</build_depend>


</package>
